@@ -18,11 +18,13 @@ package org.springframework.kafka.listener;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.isNull;
+import static org.mockito.ArgumentMatchers.anyMap;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.willAnswer;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 
 import java.time.Duration;
 import java.util.ArrayList;
@@ -40,8 +42,6 @@ import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.clients.consumer.ConsumerRebalanceListener;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
-import org.apache.kafka.clients.consumer.OffsetAndMetadata;
-import org.apache.kafka.clients.producer.Producer;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.record.TimestampType;
 import org.junit.jupiter.api.Test;
@@ -55,31 +55,24 @@ import org.springframework.kafka.annotation.KafkaListener;
 import org.springframework.kafka.config.ConcurrentKafkaListenerContainerFactory;
 import org.springframework.kafka.config.KafkaListenerEndpointRegistry;
 import org.springframework.kafka.core.ConsumerFactory;
-import org.springframework.kafka.core.ProducerFactory;
-import org.springframework.kafka.listener.ContainerProperties.AckMode;
 import org.springframework.kafka.test.utils.KafkaTestUtils;
-import org.springframework.kafka.transaction.KafkaTransactionManager;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 
 /**
  * @author Gary Russell
- * @since 2.0.1
+ * @since 2.3.2
  *
  */
 @SpringJUnitConfig
 @DirtiesContext
-public class SeekToCurrentOnErrorBatchModeTXTests {
+public class SubBatchPerPartitionTests {
 
 	private static final String CONTAINER_ID = "container";
 
 	@SuppressWarnings("rawtypes")
 	@Autowired
 	private Consumer consumer;
-
-	@SuppressWarnings("rawtypes")
-	@Autowired
-	private Producer producer;
 
 	@Autowired
 	private Config config;
@@ -89,58 +82,22 @@ public class SeekToCurrentOnErrorBatchModeTXTests {
 
 	/*
 	 * Deliver 6 records from three partitions, fail on the second record second
-	 * partition, first attempt; verify partition 0,1 committed and a total of 7 records
-	 * handled after seek.
+	 * partition.
 	 */
 	@SuppressWarnings("unchecked")
 	@Test
 	public void discardRemainingRecordsFromPollAndSeek() throws Exception {
 		assertThat(this.config.deliveryLatch.await(10, TimeUnit.SECONDS)).isTrue();
+		assertThat(this.config.commitLatch.await(10, TimeUnit.SECONDS)).isTrue();
 		assertThat(this.config.pollLatch.await(10, TimeUnit.SECONDS)).isTrue();
 		this.registry.stop();
 		assertThat(this.config.closeLatch.await(10, TimeUnit.SECONDS)).isTrue();
-		InOrder inOrder = inOrder(this.consumer, this.producer);
+		InOrder inOrder = inOrder(this.consumer);
 		inOrder.verify(this.consumer).subscribe(any(Collection.class), any(ConsumerRebalanceListener.class));
 		inOrder.verify(this.consumer).poll(Duration.ofMillis(ContainerProperties.DEFAULT_POLL_TIMEOUT));
-		inOrder.verify(this.producer).beginTransaction();
-		Map<TopicPartition, OffsetAndMetadata> offsets = new LinkedHashMap<>();
-		offsets.put(new TopicPartition("foo", 0), new OffsetAndMetadata(1L));
-		inOrder.verify(this.producer).sendOffsetsToTransaction(offsets, CONTAINER_ID);
-		inOrder.verify(this.producer).commitTransaction();
-		offsets.clear();
-		offsets.put(new TopicPartition("foo", 0), new OffsetAndMetadata(2L));
-		inOrder.verify(this.producer).beginTransaction();
-		inOrder.verify(this.producer).sendOffsetsToTransaction(offsets, CONTAINER_ID);
-		inOrder.verify(this.producer).commitTransaction();
-		offsets.clear();
-		offsets.put(new TopicPartition("foo", 1), new OffsetAndMetadata(1L));
-		inOrder.verify(this.producer).beginTransaction();
-		inOrder.verify(this.producer).sendOffsetsToTransaction(offsets, CONTAINER_ID);
-		inOrder.verify(this.producer).commitTransaction();
-		inOrder.verify(this.producer).beginTransaction();
-		inOrder.verify(this.consumer).seek(new TopicPartition("foo", 1), 1L);
-		inOrder.verify(this.consumer).seek(new TopicPartition("foo", 2), 0L);
-		inOrder.verify(this.producer).abortTransaction();
+		inOrder.verify(this.consumer, times(3)).commitSync(any(), eq(Duration.ofSeconds(60)));
 		inOrder.verify(this.consumer).poll(Duration.ofMillis(ContainerProperties.DEFAULT_POLL_TIMEOUT));
-		offsets.clear();
-		offsets.put(new TopicPartition("foo", 1), new OffsetAndMetadata(2L));
-		inOrder.verify(this.producer).beginTransaction();
-		inOrder.verify(this.producer).sendOffsetsToTransaction(offsets, CONTAINER_ID);
-		inOrder.verify(this.producer).commitTransaction();
-		offsets.clear();
-		offsets.put(new TopicPartition("foo", 2), new OffsetAndMetadata(1L));
-		inOrder.verify(this.producer).beginTransaction();
-		inOrder.verify(this.producer).sendOffsetsToTransaction(offsets, CONTAINER_ID);
-		inOrder.verify(this.producer).commitTransaction();
-		offsets.clear();
-		offsets.put(new TopicPartition("foo", 2), new OffsetAndMetadata(2L));
-		inOrder.verify(this.producer).beginTransaction();
-		inOrder.verify(this.producer).sendOffsetsToTransaction(offsets, CONTAINER_ID);
-		inOrder.verify(this.producer).commitTransaction();
-		inOrder.verify(this.consumer).poll(Duration.ofMillis(ContainerProperties.DEFAULT_POLL_TIMEOUT));
-		assertThat(this.config.count).isEqualTo(7);
-		assertThat(this.config.contents.toArray()).isEqualTo(new String[]
-				{ "foo", "bar", "baz", "qux", "qux", "fiz", "buz" });
+		assertThat(this.config.contents).contains("foo", "bar", "baz", "qux", "fiz", "buz");
 	}
 
 	@Configuration
@@ -149,21 +106,18 @@ public class SeekToCurrentOnErrorBatchModeTXTests {
 
 		private final List<String> contents = new ArrayList<>();
 
-		private final CountDownLatch pollLatch = new CountDownLatch(3);
+		private final CountDownLatch pollLatch = new CountDownLatch(2);
 
-		private final CountDownLatch deliveryLatch = new CountDownLatch(7);
+		private final CountDownLatch deliveryLatch = new CountDownLatch(3);
+
+		private final CountDownLatch commitLatch = new CountDownLatch(3);
 
 		private final CountDownLatch closeLatch = new CountDownLatch(1);
 
-		private int count;
-
 		@KafkaListener(id = CONTAINER_ID, topics = "foo")
-		public void foo(String in) {
-			this.contents.add(in);
+		public void foo(List<String> in) {
+			contents.addAll(in);
 			this.deliveryLatch.countDown();
-			if (++this.count == 4) { // part 1, offset 1, first time
-				throw new RuntimeException("foo");
-			}
 		}
 
 		@SuppressWarnings({ "rawtypes" })
@@ -185,7 +139,7 @@ public class SeekToCurrentOnErrorBatchModeTXTests {
 			final TopicPartition topicPartition2 = new TopicPartition("foo", 2);
 			willAnswer(i -> {
 				((ConsumerRebalanceListener) i.getArgument(1)).onPartitionsAssigned(
-						Collections.singletonList(topicPartition1));
+						Arrays.asList(topicPartition0, topicPartition1, topicPartition2));
 				return null;
 			}).given(consumer).subscribe(any(Collection.class), any(ConsumerRebalanceListener.class));
 			Map<TopicPartition, List<ConsumerRecord>> records1 = new LinkedHashMap<>();
@@ -198,28 +152,26 @@ public class SeekToCurrentOnErrorBatchModeTXTests {
 			records1.put(topicPartition2, Arrays.asList(
 					new ConsumerRecord("foo", 2, 0L, 0L, TimestampType.NO_TIMESTAMP_TYPE, 0, 0, 0, null, "fiz"),
 					new ConsumerRecord("foo", 2, 1L, 0L, TimestampType.NO_TIMESTAMP_TYPE, 0, 0, 0, null, "buz")));
-			Map<TopicPartition, List<ConsumerRecord>> records2 = new LinkedHashMap<>(records1);
-			records2.remove(topicPartition0);
-			records2.put(topicPartition1, Arrays.asList(
-					new ConsumerRecord("foo", 1, 1L, 0L, TimestampType.NO_TIMESTAMP_TYPE, 0, 0, 0, null, "qux")));
 			final AtomicInteger which = new AtomicInteger();
 			willAnswer(i -> {
 				this.pollLatch.countDown();
 				switch (which.getAndIncrement()) {
 					case 0:
 						return new ConsumerRecords(records1);
-					case 1:
-						return new ConsumerRecords(records2);
 					default:
 						try {
-							Thread.sleep(1000);
+							Thread.sleep(100);
 						}
-						catch (InterruptedException e) {
+						catch (@SuppressWarnings("unused") InterruptedException e) {
 							Thread.currentThread().interrupt();
 						}
 						return new ConsumerRecords(Collections.emptyMap());
 				}
 			}).given(consumer).poll(Duration.ofMillis(ContainerProperties.DEFAULT_POLL_TIMEOUT));
+			willAnswer(i -> {
+				this.commitLatch.countDown();
+				return null;
+			}).given(consumer).commitSync(anyMap(), any());
 			willAnswer(i -> {
 				this.closeLatch.countDown();
 				return null;
@@ -233,31 +185,10 @@ public class SeekToCurrentOnErrorBatchModeTXTests {
 			ConcurrentKafkaListenerContainerFactory factory = new ConcurrentKafkaListenerContainerFactory();
 			factory.setConsumerFactory(consumerFactory());
 			factory.getContainerProperties().setAckOnError(false);
-			factory.setErrorHandler(new SeekToCurrentErrorHandler());
-			factory.getContainerProperties().setAckMode(AckMode.BATCH);
-			factory.getContainerProperties().setTransactionManager(tm());
+			factory.setBatchListener(true);
+			factory.getContainerProperties().setMissingTopicsFatal(false);
+			factory.getContainerProperties().setSubBatchPerPartition(true);
 			return factory;
-		}
-
-		@SuppressWarnings({ "unchecked", "rawtypes" })
-		@Bean
-		public KafkaTransactionManager tm() {
-			return new KafkaTransactionManager<>(producerFactory());
-		}
-
-		@SuppressWarnings("rawtypes")
-		@Bean
-		public ProducerFactory producerFactory() {
-			ProducerFactory pf = mock(ProducerFactory.class);
-			given(pf.createProducer(isNull())).willReturn(producer());
-			given(pf.transactionCapable()).willReturn(true);
-			return pf;
-		}
-
-		@SuppressWarnings("rawtypes")
-		@Bean
-		public Producer producer() {
-			return mock(Producer.class);
 		}
 
 	}
